--- a/docker-compose.tmpl
+++ b/docker-compose.tmpl
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   backend:
-    image: IMAGE_NAME
+    image: $IMAGE_NAME
     container_name: backend
     ports:
       - "80:80"
