--- a/docker-compose.tmpl
+++ b/docker-compose.tmpl
@@ -3,5 +3,20 @@ services:
   backend:
     image: $IMAGE_NAME
     container_name: backend
-    ports:
-      - "80:80"
+    expose:
+     - "80"
+    network:
+     - backend-network
+  nginx:
+      image: nginx
+      container_name: nginx_container
+      ports:
+        - "443:443"
+      volumes:
+        - ./nginx.conf:/etc/nginx/nginx.conf.d/default.conf
+      depends_on:
+        - backend
+      networks:
+        - backend-network
+networks:
+ backend-network:
