--- a/docker-compose.tmpl
+++ b/docker-compose.tmpl
@@ -8,15 +8,16 @@ services:
     networks:
      - backend-network
   nginx:
-      image: nginx:latest
-      container_name: nginx_container
-      ports:
-        - "443:443"
-      volumes:
-        - ./nginx.conf:/etc/nginx/nginx.conf.d/default.conf
-      depends_on:
-        - backend
-      networks:
-        - backend-network
+    image: nginx:latest
+    container_name: nginx_container
+    ports:
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf.d/default.conf
+      - ./ssl:/etc/nginx/ssl
+    depends_on:
+      - backend
+    networks:
+      - backend-network
 networks:
  backend-network:
