--- a/docker-compose.tmpl
+++ b/docker-compose.tmpl
@@ -23,8 +23,10 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    expose:
+      - 5432
     networks:
       - backend-network
     healthcheck:
@@ -37,10 +39,31 @@ services:
       - .env
     image: redis:latest
     container_name: redis
-    ports:
-      - "${REDIS_PORT}:6379"
+    expose:
+      - 6379
     networks:
       - backend-network
+  minio:
+      container_name: minio_container
+      image: minio/minio:latest
+      environment:
+        MINIO_HOST: ${MINIO_HOST}
+        MINIO_BUCKET_NAME: ${MINIO_BUCKET_NAME}
+        MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+        MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+        MINIO_PORT: ${MINIO_PORT}
+      volumes:
+        - minio_data:/data
+      expose:
+        - 9000
+      healthcheck:
+        test: [ "CMD", "curl", "-f", "http://${MINIO_HOST}:${MINIO_PORT}/minio/health/live" ]
+        interval: 5s
+        timeout: 30s
+        retries: 3
+        start_period: 10s
+      networks:
+        - backend-network
   nginx:
     image: nginx:latest
     container_name: nginx_container
@@ -55,3 +78,8 @@ services:
       - backend-network
 networks:
  backend-network:
+volumes:
+  postgres_data:
+  minio_data:
+  redis_data:
+
